--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -5,10 +5,17 @@ workflows:
   build:
     jobs:
       - build:
-        filters:
-          branches:
-            only:
-              - main
+          filters:
+            branches:
+              only:
+                - main
+      - deploy:
+          filters:
+            branches:
+              only:
+                - main
+          requires:
+            - build
 
 jobs:
   build:
@@ -25,10 +32,15 @@ jobs:
       - run:
           name: install-npm
           command: npm install
-      - run:
-          name: test-run
-          command: npm run test
       - save_cache:
           key: dependency-cache-{{ checksum "package-lock.json" }}
           paths:
             - ./node_modules
+  deploy:
+    docker:
+      - image: circleci/node:10.16.3
+    steps:
+      - run:
+          name: deploy-application
+          command: ssh -o StrictHostKeychecking=no $EC2_USERNAME@EC2_PUBLIC_DNS "rm -rf 
+          ExampleApp/;git clone https://github.com/DevOps-NCI/ExampleApp.git; source ExampleApp/deploy.sh"
