--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -42,5 +42,5 @@ jobs:
     steps:
       - run:
           name: deploy-application
-          command: ssh -o StrictHostKeychecking=no $EC2_USERNAME@EC2_PUBLIC_DNS "rm -rf 
-          ExampleApplication/;git clone https://github.com/DevOps-NCI/ExampleApp.git; source ExampleApp/deploy.sh"
+          command: |
+            ssh -o StrictHostKeychecking=no $EC2_USERNAME@EC2_PUBLIC_DNS "rm -rf ExampleApplication/;git clone https://github.com/DevOps-NCI/ExampleApp.git; source ExampleApp/deploy.sh"
