--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -43,4 +43,4 @@ jobs:
       - run:
           name: deploy-application
           command: |
-            ssh -o StrictHostKeychecking=no $EC2_USERNAME@EC2_PUBLIC_DNS "rm -rf ExampleApp/;git clone https://github.com/DevOps-NCI/ExampleApp.git; source ExampleApp/deploy.sh"
+            ssh -o StrictHostKeychecking=no $EC2_USERNAME@EC2_PUBLIC_DNS "rm -rf ExampleApp/;git clone https://github.com/DevOps-NCI/ExampleApp.git; source ExampleApplication/deploy.sh"
