--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -22,6 +22,8 @@ jobs:
     working_directory: ~/ExampleApplication
     docker:
       - image: circleci/node:10.16.3
+    environment:
+      EC2_PUBLIC_DNS: ec2-13-53-187-34.eu-north-1.compute.amazonaws.com
     steps:
       - checkout
       - run:
