--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -24,6 +24,7 @@ jobs:
       - image: circleci/node:10.16.3
     environment:
       EC2_PUBLIC_DNS: ec2-13-53-187-34.eu-north-1.compute.amazonaws.com
+      EC2_USERNAME: ubuntu
     steps:
       - checkout
       - run:
