--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,3 +1,54 @@
+# version: 2.1
+
+# workflows:
+#   version: 2
+#   build:
+#     jobs:
+#       - build:
+#           filters:
+#             branches:
+#               only:
+#                 - main
+#       - deploy:
+#           filters:
+#             branches:
+#               only:
+#                 - main
+#           requires:
+#             - build
+
+# jobs:
+#   build:
+#     working_directory: ~/ExampleApplication
+#     docker:
+#       - image: circleci/node:10.16.3
+#     environment:
+#       EC2_PUBLIC_DNS: ec2-13-53-187-34.eu-north-1.compute.amazonaws.com
+#       EC2_USERNAME: ubuntu
+#     steps:
+#       - checkout
+#       - run:
+#           name: update-npm
+#           command: 'sudo npm install -g npm@5'
+#       - restore_cache:
+#           key: dependency-cache-{{ checksum "package-lock.json" }}
+#       - run:
+#           name: install-npm
+#           command: npm install
+#       - save_cache:
+#           key: dependency-cache-{{ checksum "package-lock.json" }}
+#           paths:
+#             - ./node_modules
+#   deploy:
+#     docker:
+#       - image: circleci/node:10.16.3
+#     steps:
+#       - run:
+#           name: deploy-application
+#           command: |
+#             ssh -o StrictHostKeychecking=no $EC2_USERNAME@EC2_PUBLIC_DNS "rm -rf ExampleApp/;git clone https://github.com/DevOps-NCI/ExampleApp.git; source ExampleApplication/deploy.sh"
+
+
 version: 2.1
 
 workflows:
@@ -39,6 +90,7 @@ jobs:
           key: dependency-cache-{{ checksum "package-lock.json" }}
           paths:
             - ./node_modules
+
   deploy:
     docker:
       - image: circleci/node:10.16.3
@@ -46,4 +98,4 @@ jobs:
       - run:
           name: deploy-application
           command: |
-            ssh -o StrictHostKeychecking=no $EC2_USERNAME@EC2_PUBLIC_DNS "rm -rf ExampleApp/;git clone https://github.com/DevOps-NCI/ExampleApp.git; source ExampleApplication/deploy.sh"
+            ssh -o StrictHostKeychecking=no $EC2_USERNAME@$EC2_PUBLIC_DNS "rm -rf ExampleApp/; git clone https://github.com/DevOps-NCI/ExampleApp.git; source ExampleApplication/deploy.sh"
