--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -98,4 +98,4 @@ jobs:
       - run:
           name: deploy-application
           command: |
-            ssh -o StrictHostKeychecking=no ubuntu@ec2-13-53-187-34.eu-north-1.compute.amazonaws.com "rm -rf ExampleApp/; git clone https://github.com/DevOps-NCI/ExampleApp.git; source ExampleApp/deploy.sh"
+            ssh -o StrictHostKeychecking=no $EC2_USERNAME@$EC2_PUBLIC_DNS "rm -rf ExampleApp/; git clone https://github.com/DevOps-NCI/ExampleApp.git; source ExampleApp/deploy.sh"
