--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -87,7 +87,6 @@ jobs:
           key: dependency-cache-{{ checksum "package-lock.json" }}
           paths:
             - ./node_modules
-
   deploy:
     docker:
       - image: circleci/node:10.16.3
@@ -95,4 +94,4 @@ jobs:
       - run:
           name: deploy-application
           command: |
-            ssh -o StrictHostKeychecking=no $EC2_USERNAME@$EC2_PUBLIC_DNS "rm -rf ExampleApp/; git clone https://github.com/DevOps-NCI/ExampleApp.git; source ExampleApp/deploy.sh"
+            ssh -o StrictHostKeychecking=no $EC2_USERNAME@$EC2_PUBLIC_DNS "export SERVER=\"$SERVER\"; export PRIVATE_KEY=\"$PRIVATE_KEY\"; rm -rf ExampleApp/; git clone https://github.com/DevOps-NCI/ExampleApp.git; source ExampleApp/deploy.sh"
